# dxf2obj

./: README.md  pyproject.toml
src/dxf2obj/: main.py  models.py  protocols.py
src/dxf2obj/dxf/: factory.py  handler.py
src/dxf2obj/readers/: dxf.py  landxml.py
tests/: template.dwg
tests/pipes/dxf/: pipe_lines_haltung.dxf  pipe_lines_not_haltung.dxf  pipe_lines_not_haltung_with_shaft.dxf  pipe_lines_wrong.dxf  pipe_polylines_haltung.dxf  pipe_polylines_not_haltung.dxf
tests/shaft/dxf/: shaft_block_rectangle.dxf  shaft_block_round_double.dxf  shaft_block_round_single.dxf  shaft_circle_double.dxf  shaft_circle_single.dxf  shaft_line_rectangle.dxf
